Update composer.json file

--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "sngrl/php-firebase-cloud-messaging",
+    "name": "vanderbilt-redcap/php-firebase-cloud-messaging",
     "description": "PHP API for Firebase Cloud Messaging from Google",
     "license": "MIT",
     "keywords": ["PHP","FCM","Google","Firebase","Cloud","Notifications","Android","iOS","Chrome"],
-    "homepage": "https://github.com/sngrl/php-firebase-cloud-messaging",
+    "homepage": "https://github.com/vanderbilt-redcap/php-firebase-cloud-messaging",
     "authors": [
         {
-            "name": "Sngrl",
-            "email": "i@sngrl.ru"
+            "name": "Vaishali Jagtap",
+            "email": "vaishali.jagtap@vumc.org"
         }
     ],
     "require": {
@@ -20,12 +20,12 @@
     },
     "autoload": {
         "psr-4": {
-            "sngrl\\PhpFirebaseCloudMessaging\\": "src/"
+            "Vanderbilt\\PhpFirebaseCloudMessaging\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "sngrl\\PhpFirebaseCloudMessaging\\Tests\\": "tests/"
+            "Vanderbilt\\PhpFirebaseCloudMessaging\\Tests\\": "tests/"
         }
     }
 }
